chenge keys for bibliography, sort bibliography

--- a/1_title/2_task.tex
+++ b/1_title/2_task.tex
@@ -4,11 +4,10 @@
     {\textbf{\faculty}}\\
     {\textbf{\department}}
 \end{center}
-
 \begin{flushleft}
-    Рівень вищої освіти – другий (магістерський) за освітньо-науковою програмою \\
-    Спеціальність (освітньо-наукова програма) – \specialityCode~\specialityTitle \\
-    («\specialityName»)
+    Рівень вищої освіти – другий (магістерський) \\
+    Спеціальність – \specialityCode~\specialityTitle \\
+    Освітньо-наукова програма: «\specialityName»
 \end{flushleft}
 \begin{adjustwidth}{21em}{1em}
     \begin{flushright}
