--- a/2_abstract/2_abstract_ua.tex
+++ b/2_abstract/2_abstract_ua.tex
@@ -21,19 +21,14 @@
 
 Для досягнення мети було використано:
 \begin{itemize}
-  \item
-        SIFT алгоритм для знаходження ключових точок зображення;
-  \item   
-        гомографію для отримання панорамних слайдів;
-  \item
-        алгоритм максимального потоку Бойкова-Колмогорова
-        для отримання маски рухомих об'єктів;
-  \item
-        згорткові нейронні мережі для детекції людини;
-  \item
-        оператори знешумлення та бінаризації зображень.
+      \item SIFT алгоритм для знаходження ключових точок зображення;
+      \item гомографію для отримання панорамних слайдів;
+      \item алгоритм максимального потоку Бойкова-Колмогорова
+            для отримання маски рухомих об'єктів;
+      \item згорткові нейронні мережі для детекції людини;
+      \item оператори знешумлення та бінаризації зображень.
 \end{itemize}
 
 Ключові слова:
 \MakeUppercase{оброблення зображень, інтелектуальне оброблення відео,
-  стабілізація відео}
+      стабілізація відео}
