--- a/5_problem/3_solution.tex
+++ b/5_problem/3_solution.tex
@@ -1,8 +1,7 @@
 \section{Пропоновані рішення}
 
-
 У даній роботі описується алгоритм напівавтоматичного
-створення слайдів на основі відеозапису лекції (рис. \ref{fig:pipeline}).
+створення слайдів на основі відеозапису лекції (рис. \ref{fig:panorama_pipeline}).
 За допомогою наведеного алгоритму можна обробляти відео
 у режимі реального часу, адже кожна його ітерація потребує
 лише поточний на попередні кадри. Між кожною парою
@@ -53,7 +52,7 @@
         \end{tikzpicture}
     \end{center}
     \caption{Процедура створення панорамних слайдів
-        \label{fig:pipeline}
+        \label{fig:panorama_pipeline}
     }
 \end{figure}
 \section{Вхід алгоритму}
