--- a/5_problem/8_homography_estimation.tex
+++ b/5_problem/8_homography_estimation.tex
@@ -96,7 +96,7 @@
     \label{eq:honography_svd}
 \end{equation}
 
-Для оцінки гомографії використали принцип RANSAC \cite{ransac} (алгоритм \ref{al:ransac_homography}).
+Для оцінки гомографії використали принцип RANSAC \cite{bib:ransac} (алгоритм \ref{al:ransac_homography}).
 Користувач вводить рівень \(\varepsilon > 0\)
 дозволеної похибки розрахунків ~---~ що менше, то краще, проте тим довше
 буде працювати алгоритм пошуку матриці гомографії
@@ -155,7 +155,7 @@
             \label{fig:yakovlev:keypoints:b}
         }
     \end{subfigure}
-    \caption{Результат застосування маски для відповідних точок з відео \cite{yakovlev_discrete_math_video}
+    \caption{Результат застосування маски для відповідних точок з відео \cite{video:mmzi:yakovlev_discrete_math}
         \label{fig:yakovlev:keypoints}
     }
 \end{figure}
