--- a/6_results/3_futher_improvements.tex
+++ b/6_results/3_futher_improvements.tex
@@ -12,7 +12,7 @@
     \item можливість векторизувати написи на дошці;
     \item реалізувати програмну частину за допомогою більш ефективних засобів:
       наприклад, використовувати компільовану мову програмування
-      та використовувати обчислення на GPU \cite{cuda,opencl}.
+      та використовувати обчислення на GPU \cite{bib:cuda,bib:opencl}.
 \end{itemize}
 
 \clearpage
