--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,118 +1,81 @@
-@misc{algebra_geometry,
-  title         = {Алгебра та геометрія, лекція 22-5: алгебраїчні властивості множини матриць},
-  howpublished  = {https://youtu.be/MNgsOb2OM30},
-  journal       = {YouTube},
-  author        = {Кафедра ММЗІ},
-  year          = {2019},
-  language      = {ukrainian},
-  month         = {Dec}
-}
-@article{boykov_kolmogorov,
-  author  = {Boykov, Y. and Kolmogorov, V.},
-  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+@article{bib:boykov_kolmogorov,
   title   = {An experimental comparison of min-cut/max- flow algorithms for energy minimization in vision},
-  year    = {2004},
-  volume  = {26},
-  number  = {9},
-  pages   = {1124-1137},
+  author  = {Boykov, Y. and Kolmogorov, V.},
+  year    = 2004,
+  journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+  volume  = 26,
+  number  = 9,
+  pages   = {1124--1137},
   doi     = {10.1109/TPAMI.2004.60}
 }
-@article{creating_slides_1,
+@article{bib:creating_slides_1,
   title   = {Creating Slides from Video Lecture},
-  url     = {https://s3.eu-central-1.amazonaws.com/ucu.edu.ua/wp-content/uploads/sites/8/2021/04/Creating-Slides-from-Video-Lecture.pdf},
-  journal = {Masters Symposium on Advances in Data Mining, Machine Learning, and Computer Vision},
   author  = {Shylo M., Smirnov A., Krygin V.},
-  year    = {2021},
-  month   = {Feb}
+  year    = 2021,
+  month   = {Feb},
+  journal = {Masters Symposium on Advances in Data Mining, Machine Learning, and Computer Vision},
+  url     = {https://s3.eu-central-1.amazonaws.com/ucu.edu.ua/wp-content/uploads/sites/8/2021/04/Creating-Slides-from-Video-Lecture.pdf}
 }
-@inproceedings{davila:2017,
-  author    = {Davila, Kenny and Zanibbi, Richard},
-  booktitle = {2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
+@book{bib:cuda,
+  title     = {CUDA Programming: A Developer’s Guide to Parallel Computing with GPUs},
+  author    = {Cook, Shane},
+  year      = 2012,
+  publisher = {Morgan Kaufmann Publishers Inc.},
+  address   = {San Francisco, CA, USA},
+  isbn      = 9780124159334,
+  edition   = {1st}
+}
+@inproceedings{bib:davila:2017,
   title     = {Whiteboard Video Summarization via Spatio-Temporal Conflict Minimization},
-  year      = {2017},
+  author    = {Davila, Kenny and Zanibbi, Richard},
+  year      = 2017,
+  booktitle = {2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
   volume    = {01},
-  number    = {},
-  pages     = {355-362},
+  pages     = {355--362},
   doi       = {10.1109/ICDAR.2017.66}
 }
-@article{davila:2021,
-  author  = {Davila, Kenny and Xu, Fei and Setlur, Srirangaraj and Govindaraju, Venu},
-  journal = {IEEE Access},
+@article{bib:davila:2021,
   title   = {FCN-LectureNet: Extractive Summarization of Whiteboard and Chalkboard Lecture Videos},
-  year    = {2021},
-  volume  = {9},
-  number  = {},
-  pages   = {104469-104484},
+  author  = {Davila, Kenny and Xu, Fei and Setlur, Srirangaraj and Govindaraju, Venu},
+  year    = 2021,
+  journal = {IEEE Access},
+  volume  = 9,
+  pages   = {104469--104484},
   doi     = {10.1109/ACCESS.2021.3099427}
 }
-@misc{deep_wise_sep_conv_website,
-  title         = {Depthwise separable convolutions for machine learning},
-  howpublished  = {https://eli.thegreenplace.net/2018/depthwise-separable-convolutions-for-machine-learning/},
-  journal       = {Eli Bendersky’s website},
-  author        = {Bendersky, Eli},
-  year          = {2018},
-  language      = {english},
-  month         = {Apr}
-}
-@misc{dorohovtsev_video,
-  title         = {Лекция 5/1. Спецкурс весна 2020, Дороговцев Андрей Анатольевич},
-  howpublished  = {https://youtu.be/\_aGdtc23o1o},
-  year          = {2020},
-  language      = {russian},
-  month         = {Mar}
-}
-@misc{dorohovtsev_wiener_video,
-  title         = {A.A.Dorogovtsev. Properties of Wiener process, Part 3},
-  howpublished  = {https://youtu.be/AYvxZCfPZV8},
-  year          = {2022},
-  language      = {english},
-  month         = {Feb}
-}
-@article{edmods_karp,
-  author     = {Edmonds, Jack and Karp, Richard M.},
+@article{bib:edmods_karp,
   title      = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
-  year       = {1972},
-  issue_date = {April 1972},
+  author     = {Edmonds, Jack and Karp, Richard M.},
+  year       = 1972,
+  month      = {apr},
+  journal    = {J. ACM},
   publisher  = {Association for Computing Machinery},
   address    = {New York, NY, USA},
-  volume     = {19},
-  number     = {2},
+  volume     = 19,
+  number     = 2,
+  pages      = {248–264},
+  doi        = {10.1145/321694.321699},
   issn       = {0004-5411},
   url        = {https://doi.org/10.1145/321694.321699},
-  doi        = {10.1145/321694.321699},
-  journal    = {J. ACM},
-  month      = {apr},
-  pages      = {248–264},
-  numpages   = {17}
+  issue_date = {April 1972},
+  numpages   = 17
 }
-@misc{faster_rcnn,
-  doi           = {10.48550/ARXIV.1506.01497},
-  howpublished  = {https://arxiv.org/abs/1506.01497},
-  author        = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
-  title         = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
-  publisher     = {arXiv},
-  year          = {2015},
-  language      = {english},
-  copyright     = {arXiv.org perpetual, non-exclusive license}
+@misc{bib:faster_rcnn,
+  title        = {Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks},
+  author       = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  year         = 2015,
+  publisher    = {arXiv},
+  doi          = {10.48550/ARXIV.1506.01497},
+  copyright    = {arXiv.org perpetual, non-exclusive license},
+  howpublished = {https://arxiv.org/abs/1506.01497},
+  language     = {english}
 }
-@article{faster_rcnn_web_article,
-  title   = {Faster RCNN Object detection},
-  url     = {https://towardsdatascience.com/faster-rcnn-object-detection-f865e5ed7fc4},
-  journal = {Towards Data Science},
-  author  = {KHAZRI, Achraf},
-  year    = {2019},
-  month   = {Apr}
-}
-@article{faster-rcnn,
-  author     = {Shaoqing Ren and
-                Kaiming He and
-                Ross B. Girshick and
-                Jian Sun},
-  title      = {Faster {R-CNN:} Towards Real-Time Object Detection with Region Proposal
-                Networks},
+@article{bib:faster-rcnn,
+  title      = {Faster {R-CNN:} Towards Real-Time Object Detection with Region Proposal Networks},
+  author     = {Shaoqing Ren and Kaiming He and Ross B. Girshick and Jian Sun},
+  year       = 2015,
   journal    = {CoRR},
   volume     = {abs/1506.01497},
-  year       = {2015},
   url        = {http://arxiv.org/abs/1506.01497},
   eprinttype = {arXiv},
   eprint     = {1506.01497},
@@ -120,71 +83,49 @@
   biburl     = {https://dblp.org/rec/journals/corr/RenHG015.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@article{ford_fulkerson,
+@article{bib:ford_fulkerson,
   title     = {Maximal Flow Through a Network},
-  volume    = {8},
-  doi       = {10.4153/CJM-1956-045-5},
+  author    = {Ford, L. R. and Fulkerson, D. R.},
+  year      = 1956,
   journal   = {Canadian Journal of Mathematics},
   publisher = {Cambridge University Press},
-  author    = {Ford, L. R. and Fulkerson, D. R.},
-  year      = {1956},
-  pages     = {399–404}
+  volume    = 8,
+  pages     = {399–404},
+  doi       = {10.4153/CJM-1956-045-5}
 }
-@misc{fpmi_2021_video,
-  title         = {Кратные интегралы и теория поля / 2 курс 1 семестр},
-  howpublished  = {https://youtu.be/\_pt7x37urx4},
-  journal       = {YouTube},
-  author        = {ФПМИ, Лекторий},
-  year          = {2021},
-  language      = {russian},
-  month         = {Dec}
-}
-@book{hartley_zisserman_2004,
-  place     = {Cambridge},
-  edition   = {2},
+@book{bib:hartley_zisserman_2004,
   title     = {Multiple View Geometry in Computer Vision},
-  doi       = {10.1017/CBO9780511811685},
-  publisher = {Cambridge University Press},
   author    = {Hartley, Richard and Zisserman, Andrew},
-  year      = {2004}
+  year      = 2004,
+  publisher = {Cambridge University Press},
+  doi       = {10.1017/CBO9780511811685},
+  place     = {Cambridge},
+  edition   = 2
 }
-@book{integral_image,
+@book{bib:integral_image,
   title     = {Robust Real-time Object Detection},
-  url       = {http://www.hpl.hp.com/techreports/Compaq-DEC/CRL-2001-1.pdf},
+  author    = {Viola, Paul; Jones, Michael},
+  year      = 2002,
   publisher = {International Journal of Computer Vision},
-  author    = {Viola, Paul; Jones, Michael },
-  year      = {2002},
-  pages     = {4-5}
+  pages     = {4--5},
+  url       = {http://www.hpl.hp.com/techreports/Compaq-DEC/CRL-2001-1.pdf}
 }
-@misc{krygin_geometry,
-  title         = {Krygin Geometry 2020 - Lecture 4: Part 1},
-  howpublished  = {https://youtu.be/A0S33OSngG4},
-  journal       = {YouTube},
-  author        = {FI-81-3mn PTI},
-  year          = {2020},
-  language      = {english},
-  month         = {Mar}
-}
-@book{median_in_statistics,
+@book{bib:median_in_statistics,
   title     = {Probability theory},
   author    = {Stroock, Daniel W},
-  publisher = {Cambridge University Press},
-  edition   = {2},
+  year      = 2010,
   month     = {Dec},
-  year      = {2010},
-  pages     = {43},
-  address   = {Cambridge, England}
+  publisher = {Cambridge University Press},
+  address   = {Cambridge, England},
+  pages     = 43,
+  edition   = 2
 }
-@article{mnasnet,
-  author     = {Mingxing Tan and
-                Bo Chen and
-                Ruoming Pang and
-                Vijay Vasudevan and
-                Quoc V. Le},
+@article{bib:mnasnet,
   title      = {MnasNet: Platform-Aware Neural Architecture Search for Mobile},
+  author     = {Mingxing Tan and Bo Chen and Ruoming Pang and Vijay Vasudevan and Quoc V. Le},
+  year       = 2018,
   journal    = {CoRR},
   volume     = {abs/1807.11626},
-  year       = {2018},
   url        = {http://arxiv.org/abs/1807.11626},
   eprinttype = {arXiv},
   eprint     = {1807.11626},
@@ -192,20 +133,12 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-1807-11626.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@article{mobilenetv1,
-  author     = {Andrew G. Howard and
-                Menglong Zhu and
-                Bo Chen and
-                Dmitry Kalenichenko and
-                Weijun Wang and
-                Tobias Weyand and
-                Marco Andreetto and
-                Hartwig Adam},
-  title      = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision
-                Applications},
+@article{bib:mobilenet:v1,
+  title      = {MobileNets: Efficient Convolutional Neural Networks for Mobile Vision Applications},
+  author     = {Andrew G. Howard and Menglong Zhu and Bo Chen and Dmitry Kalenichenko and Weijun Wang and others},
+  year       = 2017,
   journal    = {CoRR},
   volume     = {abs/1704.04861},
-  year       = {2017},
   url        = {http://arxiv.org/abs/1704.04861},
   eprinttype = {arXiv},
   eprint     = {1704.04861},
@@ -213,17 +146,12 @@
   biburl     = {https://dblp.org/rec/journals/corr/HowardZCKWWAA17.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@article{mobilenetv2,
-  author     = {Mark Sandler and
-                Andrew G. Howard and
-                Menglong Zhu and
-                Andrey Zhmoginov and
-                Liang{-}Chieh Chen},
-  title      = {Inverted Residuals and Linear Bottlenecks: Mobile Networks for Classification,
-                Detection and Segmentation},
+@article{bib:mobilenet:v2,
+  title      = {Inverted Residuals and Linear Bottlenecks: Mobile Networks for Classification, Detection and Segmentation},
+  author     = {Mark Sandler and Andrew G. Howard and Menglong Zhu and Andrey Zhmoginov and Liang{-}Chieh Chen},
+  year       = 2018,
   journal    = {CoRR},
   volume     = {abs/1801.04381},
-  year       = {2018},
   url        = {http://arxiv.org/abs/1801.04381},
   eprinttype = {arXiv},
   eprint     = {1801.04381},
@@ -231,16 +159,12 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-1801-04381.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@article{mobilenetv3,
-  author     = {Andrew Howard and
-                Mark Sandler and
-                Grace Chu and
-                Liang{-}Chieh Chen and
-                Bo Chen and others},
+@article{bib:mobilenet:v3,
   title      = {Searching for MobileNetV3},
+  author     = {Andrew Howard and Mark Sandler and Grace Chu and Liang{-}Chieh Chen and Bo Chen and others},
+  year       = 2019,
   journal    = {CoRR},
   volume     = {abs/1905.02244},
-  year       = {2019},
   url        = {http://arxiv.org/abs/1905.02244},
   eprinttype = {arXiv},
   eprint     = {1905.02244},
@@ -248,263 +172,323 @@
   biburl     = {https://dblp.org/rec/journals/corr/abs-1905-02244.bib},
   bibsource  = {dblp computer science bibliography, https://dblp.org}
 }
-@article{netadapt,
-  author     = {Tien{-}Ju Yang and
-                Andrew G. Howard and
-                Bo Chen and
-                Xiao Zhang and
-                Alec Go and
-                Vivienne Sze and
-                Hartwig Adam},
+@article{bib:netadapt,
   title      = {NetAdapt: Platform-Aware Neural Network Adaptation for Mobile Applications},
+  author     = {Tien{-}Ju Yang and Andrew G. Howard and Bo Chen and Xiao Zhang and Alec Go and others},
+  year       = 2018,
   journal    = {CoRR},
   volume     = {abs/1804.03230},
-  year       = {2018},
   url        = {http://arxiv.org/abs/1804.03230},
   eprinttype = {arXiv},
   eprint     = {1804.03230},
   timestamp  = {Thu, 27 May 2021 16:20:51 +0200},
-  biburl     = {https://dblp.org/rec/journals/corr/abs-1804-03230.bib},
+  biburl     = {https://dblp.org/rec/journals/corr/abs-1804-03230.bib}
 }
-@book{orb,
-  author    = {Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary R.},
-  booktitle = {ICCV},
-  editor    = {Metaxas, Dimitris N. and Quan, Long and Sanfeliu, Alberto and Gool, Luc Van},
-  ee        = {http://doi.ieeecomputersociety.org/10.1109/ICCV.2011.6126544},
-  isbn      = {978-1-4577-1101-5},
-  pages     = {2564-2571},
-  publisher = {IEEE Computer Society},
+@misc{bib:opencl,
+  title        = {The OpenCL Specification, Version 1.1},
+  author       = {{Khronos OpenCL Working Group}},
+  year         = 2011,
+  added-at     = {2016-09-22T13:24:24.000+0200},
+  biburl       = {https://www.bibsonomy.org/bibtex/26b05670e3e58d5d057a39491d129cad4/cepek},
+  editor       = {Munshi, Aaftab},
+  interhash    = {c9067650b463bd1cf1a9958491a0aadc},
+  intrahash    = {6b05670e3e58d5d057a39491d129cad4},
+  keywords     = {geoinformatics_fce_ctu_ref imported},
+  timestamp    = {2016-09-22T13:29:55.000+0200},
+  howpublished = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf}
+}
+@book{bib:orb,
   title     = {ORB: An efficient alternative to SIFT or SURF},
-  year      = {2011}
+  author    = {Rublee, Ethan and Rabaud, Vincent and Konolige, Kurt and Bradski, Gary R.},
+  year      = 2011,
+  booktitle = {ICCV},
+  publisher = {IEEE Computer Society},
+  pages     = {2564--2571},
+  isbn      = {978-1-4577-1101-5},
+  editor    = {Metaxas, Dimitris N. and Quan, Long and Sanfeliu, Alberto and Gool, Luc Van},
+  ee        = {http://doi.ieeecomputersociety.org/10.1109/ICCV.2011.6126544}
 }
-@misc{patent_board,
-  author        = {Кригін, В. М.},
-  title         = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
-  nationality   = {Україна},
-  number        = {148642},
-  day           = {10},
-  month         = {feb},
-  year          = {2021},
-  pages         = {4},
-  language      = {ukrainian},
-  howpublished  = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
+@misc{bib:patent_board,
+  title        = {Спосіб перетворення відеозапису з дошки у слайд-шоу},
+  author       = {Кригін, В. М.},
+  year         = 2021,
+  month        = {feb},
+  day          = 10,
+  number       = 148642,
+  pages        = 4,
+  nationality  = {Україна},
+  language     = {ukrainian},
+  howpublished = {https://sis.ukrpatent.org/uk/search/detail/1613477/}
 }
-@article{pavliuk_krygin,
-  author    = {Павлюк, А. Д. and Кригiн, В. М. and Ткач, В. М.},
-  journal   = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
-  title     = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
-  year      = {2021},
-  volume    = {2},
-  number    = {9},
-  pages     = {135-137},
-  language  = {ukrainian},
-  url       = {https://drive.google.com/file/d/1V9zQB2Jvgcaw3o7eEkzMmviLRrhrHbpD/view}
+@article{bib:pavliuk_krygin,
+  title    = {Відстеження періодичного руху об’єктів зі статичної камери на прикладі відеоігор},
+  author   = {Павлюк, А. Д. and Кригiн, В. М. and Ткач, В. М.},
+  year     = 2021,
+  journal  = {Теоретичні і прикладні проблеми фізики, математики та інформатики},
+  volume   = 2,
+  number   = 9,
+  pages    = {135--137},
+  url      = {https://drive.google.com/file/d/1V9zQB2Jvgcaw3o7eEkzMmviLRrhrHbpD/view},
+  language = {ukrainian}
 }
-@misc{pytorch_library,
-  title         = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
-  author        = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury},
-  booktitle     = {Advances in Neural Information Processing Systems 32},
-  pages         = {8024--8035},
-  year          = {2019},
-  language      = {english},
-  publisher     = {Curran Associates, Inc.},
-  howpublished  = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
-}
-@misc{pymaxflow_library,
-  title   = {pmneila/PyMaxflow: Python library for creating flow networks and computing the maxflow/mincut (aka graph-cuts for Python)},
-  url     = {https://github.com/pmneila/PyMaxflow},
-  journal = {GitHub},
-  author  = {pmneila}
-}
-@book{python_language,
-  author = {Van Rossum, Guido and Drake, Fred L.},
-  title = {Python 3 Reference Manual},
-  year = {2009},
-  isbn = {1441412697},
+@book{bib:python_language,
+  title     = {Python 3 Reference Manual},
+  author    = {Van Rossum, Guido and Drake, Fred L.},
+  year      = 2009,
   publisher = {CreateSpace},
-  address = {Scotts Valley, CA}
+  address   = {Scotts Valley, CA},
+  isbn      = 1441412697,
+  url       = {https://www.python.org}
 }
-@book{quick_sort,
+@misc{bib:pytorch_library,
+  title        = {PyTorch: An Imperative Style, High-Performance Deep Learning Library},
+  author       = {Paszke, Adam and Gross, Sam and Massa, Francisco and Lerer, Adam and Bradbury},
+  year         = 2019,
+  booktitle    = {Advances in Neural Information Processing Systems 32},
+  publisher    = {Curran Associates, Inc.},
+  pages        = {8024--8035},
+  language     = {english},
+  howpublished = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-performance-deep-learning-library.pdf}
+}
+@book{bib:quick_sort,
   title     = {Algorithms In C: Fundamentals, Data Structures, Sorting, Searching, Parts 1-4, 3/E},
-  isbn      = {9788131712917},
-  url       = {https://books.google.com.ua/books?id=ylAETlep0CwC},
-  year      = {1998},
-  publisher = {Pearson Education}
+  year      = 1998,
+  publisher = {Pearson Education},
+  isbn      = 9788131712917,
+  url       = {https://books.google.com.ua/books?id=ylAETlep0CwC}
 }
-@article{ransac,
+@article{bib:ransac,
   title   = {Random sample consensus: a paradigm for model fitting with applications to image analysis and automated cartography},
   author  = {Martin A. Fischler and Robert C. Bolles},
+  year    = 1981,
   journal = {Commun. ACM},
-  year    = {1981},
-  volume  = {24},
-  pages   = {381-395},
+  volume  = 24,
+  pages   = {381--395},
   doi     = {https://doi.org/10.1145/358669.358692}
 }
-@article{sift,
-  author  = {Lowe, David},
-  year    = {2004},
-  month   = {11},
-  pages   = {91--110},
+@article{bib:sift,
   title   = {Distinctive Image Features from Scale-Invariant Keypoints},
-  volume  = {60},
+  author  = {Lowe, David},
+  year    = 2004,
+  month   = 11,
   journal = {International Journal of Computer Vision},
+  volume  = 60,
+  pages   = {91--110},
   doi     = {10.1023/B:VISI.0000029664.99615.94}
 }
-@misc{squeeze_and_excitation_website,
-  title         = {Squeeze and Excitation Networks Explained with PyTorch Implementation},
-  howpublished  = {https://amaarora.github.io/2020/07/24/SeNet.html},
-  journal       = {Committed towards better future},
-  author        = {Arora, Aman },
-  language      = {english},
-  year          = {2020},
-  month         = {Jul}
-}
-@article{ssd,
+@article{bib:ssd,
   title     = {SSD: Single Shot MultiBox Detector},
-  isbn      = {9783319464480},
-  url       = {http://dx.doi.org/10.1007/978-3-319-46448-0_2},
-  doi       = {10.1007/978-3-319-46448-0_2},
+  author    = {Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy},
+  year      = 2016,
   journal   = {Lecture Notes in Computer Science},
   publisher = {Springer International Publishing},
-  author    = {Liu, Wei and Anguelov, Dragomir and Erhan, Dumitru and Szegedy},
-  year      = {2016},
-  pages     = {21–37}
+  pages     = {21–37},
+  doi       = {10.1007/978-3-319-46448-0_2},
+  isbn      = 9783319464480,
+  url       = {http://dx.doi.org/10.1007/978-3-319-46448-0_2}
 }
-@misc{suh,
-  title     = {Whiteboard Disclosure using Background Subtraction and Object Tracking},
-  author    = {Bongsoo Suh and Alex González and Eun Soo Choi},
-  language  = {english},
-  year      = {2012}
+@misc{bib:suh,
+  title    = {Whiteboard Disclosure using Background Subtraction and Object Tracking},
+  author   = {Bongsoo Suh and Alex González and Eun Soo Choi},
+  year     = 2012,
+  language = {english}
 }
-@article{surf,
+@article{bib:surf,
   title   = {Speeded-Up Robust Features (SURF)},
+  author  = {Herbert Bay and Andreas Ess and Tinne Tuytelaars and Luc {Van Gool}},
+  year    = 2008,
   journal = {Computer Vision and Image Understanding},
-  volume  = {110},
-  number  = {3},
-  pages   = {346-359},
-  year    = {2008},
-  note    = {Similarity Matching in Computer Vision and Multimedia},
-  issn    = {1077-3142},
+  volume  = 110,
+  number  = 3,
+  pages   = {346--359},
   doi     = {https://doi.org/10.1016/j.cviu.2007.09.014},
+  issn    = {1077-3142},
   url     = {https://www.sciencedirect.com/science/article/pii/S1077314207001555},
-  author  = {Herbert Bay and Andreas Ess and Tinne Tuytelaars and Luc {Van Gool}}
+  note    = {Similarity Matching in Computer Vision and Multimedia}
 }
-@article{temporal_median_example_1,
-  author  = {Cordova-Esparza, Diana-Margarita and Terven,
-             Juan and Jiménez-Hernández,
-             Hugo and Herrera-Navarro,
-             Ana and Vázquez Cervantes,
-             Alberto and Garcia Huerta, Juan Manuel},
-  year    = {2019},
-  month   = {08},
+@article{bib:temporal_median_example,
   title   = {Low-bandwidth 3D visual telepresence system},
-  volume  = {78},
+  author  = {Cordova-Esparza, Diana-Margarita and Terven, Juan and Jiménez-Hernández, Hugo and Herrera-Navarro, Ana and Vázquez Cervantes, Alberto and others},
+  year    = 2019,
+  month   = {08},
   journal = {Multimedia Tools and Applications},
+  volume  = 78,
   doi     = {10.1007/s11042-019-7464-0}
 }
-@inproceedings{temporal_median_example_2,
-  title  = {Tracking , Learning and Detection over a Large Range of Speeds},
-  author = {Denys Rozumnyi},
-  pages  = {29},
-  year   = {2017}
-}
-@misc{wienecke,
-  author    = {Wienecke, M. and Fink, G.A. and Sagerer, G.},
-  booktitle = {Seventh International Conference on Document Analysis and Recognition, 2003. Proceedings},
+@misc{bib:wienecke,
   title     = {Towards automatic video-based whiteboard reading},
-  year      = {2003},
-  pages     = {87-91 vol.1},
-  language  = {english},
-  doi       = {10.1109/ICDAR.2003.1227633}
+  author    = {Wienecke, M. and Fink, G.A. and Sagerer, G.},
+  year      = 2003,
+  booktitle = {Seventh International Conference on Document Analysis and Recognition, 2003. Proceedings},
+  pages     = {87--91 vol.1},
+  doi       = {10.1109/ICDAR.2003.1227633},
+  language  = {english}
 }
-@misc{yakovlev_discrete_math_video,
-  title         = {Дискретна математика, лекція 05-2: відношення еквівалентності (продовження); замикання відношень},
-  howpublished  = {https://youtu.be/a7TUp4p-pIk},
-  journal       = {YouTube},
-  author        = {Кафедра ММЗІ},
-  language      = {ukrainian},
-  year          = {2016},
-  month         = {Sep}
-}
-@misc{yakovlev_numbers_theory_video,
-  title         = {Основи теорії чисел, лекція 13-1: порядок лишку за модулем},
-  howpublished  = {https://youtu.be/\_8gSo2YkfAU},
-  journal       = {YouTube},
-  author        = {Кафедра ММЗІ},
-  language      = {ukrainian},
-  year          = {2019},
-  month         = {Jun}
-}
-@misc{yeh,
-  author    = {Yeh, Fu Hao and Lee, Greg C. and Chen, Ying Ju and Liao, Chien Hsing},
-  booktitle = {2014 Tenth International Conference on Intelligent Information Hiding and Multimedia Signal Processing},
+@misc{bib:yeh,
   title     = {Robust Handwriting Extraction and Lecture Video Summarization},
-  year      = {2014},
-  pages     = {357-360},
-  language  = {english},
-  doi       = {10.1109/IIH-MSP.2014.95}
+  author    = {Yeh, Fu Hao and Lee, Greg C. and Chen, Ying Ju and Liao, Chien Hsing},
+  year      = 2014,
+  booktitle = {2014 Tenth International Conference on Intelligent Information Hiding and Multimedia Signal Processing},
+  pages     = {357--360},
+  doi       = {10.1109/IIH-MSP.2014.95},
+  language  = {english}
 }
-@misc{yolov1,
-  doi           = {10.48550/ARXIV.1506.02640},
-  howpublished  = {https://arxiv.org/abs/1506.02640},
-  author        = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
-  title         = {You Only Look Once: Unified, Real-Time Object Detection},
-  year          = {2015},
-  language      = {english},
-  copyright     = {arXiv.org perpetual, non-exclusive license}
+@misc{bib:yolov1,
+  title        = {You Only Look Once: Unified, Real-Time Object Detection},
+  author       = {Redmon, Joseph and Divvala, Santosh and Girshick, Ross and Farhadi, Ali},
+  year         = 2015,
+  doi          = {10.48550/ARXIV.1506.02640},
+  copyright    = {arXiv.org perpetual, non-exclusive license},
+  howpublished = {https://arxiv.org/abs/1506.02640},
+  language     = {english}
 }
-@misc{yolov5_pytorch,
-  author    = {Glenn Jocher and
-               Ayush Chaurasia and
-               Alex Stoken and
-               Jirka Borovec and others},
-  title     = {ultralytics/yolov5: v6.1 - TensorRT, TensorFlow
-               Edge TPU and OpenVINO Export and Inference},
-  month     = {feb},
-  year      = {2022},
-  version   = {v6.1},
-  language  = {english},
-  doi       = {10.5281/zenodo.6222936},
-  url       = {https://doi.org/10.5281/zenodo.6222936}
-}
-@inproceedings{zhang:2004,
-  author    = {Zhengyou Zhang and Li-wei He},
-  booktitle = {2004 IEEE International Conference on Acoustics, Speech, and Signal Processing},
+@inproceedings{bib:zhang:2004,
   title     = {Note-taking with a camera: whiteboard scanning and image enhancement},
-  year      = {2004},
-  volume    = {3},
+  author    = {Zhengyou Zhang and Li-wei He},
+  year      = 2004,
+  booktitle = {2004 IEEE International Conference on Acoustics, Speech, and Signal Processing},
+  volume    = 3,
   pages     = {iii-533},
   doi       = {10.1109/ICASSP.2004.1326599}
 }
-@article{zhang:2007,
-  author  = {He, Li-Wei and Zhang, Zhengyou},
-  journal = {IEEE Transactions on Multimedia},
+@article{bib:zhang:2007,
   title   = {Real-Time Whiteboard Capture and Processing Using a Video Camera for Remote Collaboration},
-  year    = {2007},
-  volume  = {9},
-  number  = {1},
-  pages   = {198-206},
+  author  = {He, Li-Wei and Zhang, Zhengyou},
+  year    = 2007,
+  journal = {IEEE Transactions on Multimedia},
+  volume  = 9,
+  number  = 1,
+  pages   = {198--206},
   doi     = {10.1109/TMM.2006.886385}
 }
-@book{cuda,
-  author = {Cook, Shane},
-  title = {CUDA Programming: A Developer’s Guide to Parallel Computing with GPUs},
-  year = {2012},
-  isbn = {9780124159334},
-  publisher = {Morgan Kaufmann Publishers Inc.},
-  address = {San Francisco, CA, USA},
-  edition = {1st}
+@misc{video:dorohovtsev_spetskurs_vesna,
+  title        = {Лекция 5/1. Спецкурс весна 2020, Дороговцев Андрей Анатольевич},
+  author       = {Theory of Stochastic Processes},
+  year         = 2020,
+  month        = {Mar},
+  howpublished = {https://youtu.be/\_aGdtc23o1o},
+  language     = {russian}
 }
-@misc{opencl,
-  added-at = {2016-09-22T13:24:24.000+0200},
-  author = {{Khronos OpenCL Working Group}},
-  biburl = {https://www.bibsonomy.org/bibtex/26b05670e3e58d5d057a39491d129cad4/cepek},
-  editor = {Munshi, Aaftab},
-  interhash = {c9067650b463bd1cf1a9958491a0aadc},
-  intrahash = {6b05670e3e58d5d057a39491d129cad4},
-  keywords = {geoinformatics_fce_ctu_ref imported},
-  timestamp = {2016-09-22T13:29:55.000+0200},
-  title = {The OpenCL Specification, Version 1.1},
-  howpublished = {https://www.khronos.org/registry/cl/specs/opencl-1.1.pdf},
-  year = 2011
+@misc{video:dorohovtsev_wiener_process,
+  title        = {A.A.Dorogovtsev. Properties of Wiener process, Part 3},
+  author       = {Theory of Stochastic Processes},
+  year         = 2022,
+  month        = {Feb},
+  howpublished = {https://youtu.be/AYvxZCfPZV8},
+  language     = {english}
+}
+@misc{video:krygin_geometry,
+  title        = {Krygin Geometry 2020 - Lecture 4: Part 1},
+  author       = {FI-81-3mn PTI},
+  year         = 2020,
+  month        = {Mar},
+  journal      = {YouTube},
+  howpublished = {https://youtu.be/A0S33OSngG4},
+  language     = {english}
+}
+@misc{video:mfti:algebra_structure,
+  title   = {Приложения алгебраических структур, Ильинский Д. Г., 21.04.2022г},
+  author  = {Дистанционные занятия МФТИ},
+  year    = 2022,
+  month   = {Jun},
+  day     = 9,
+  journal = {YouTube},
+  url     = {https://youtu.be/UfjV9KNr9jE}
+}
+@misc{video:mfti:kombinatorika,
+  title   = {Комбинаторика, Райгородский А. М., 28.04.2022г.},
+  author  = {Дистанционные занятия МФТИ},
+  year    = 2022,
+  month   = {Jun},
+  day     = 9,
+  journal = {YouTube},
+  url     = {https://youtu.be/s4Zr7zUEjfw}
+}
+@misc{video:mfti:kratnye_integraly,
+  title        = {Кратные интегралы и теория поля / 2 курс 1 семестр},
+  author       = {Лекторий ФПМИ},
+  year         = 2021,
+  month        = {Dec},
+  journal      = {YouTube},
+  howpublished = {https://youtu.be/\_pt7x37urx4},
+  language     = {russian}
+}
+@misc{video:mmzi:algebra_geometry,
+  title        = {Алгебра та геометрія, лекція 22-5: алгебраїчні властивості множини матриць},
+  author       = {Кафедра ММЗІ},
+  year         = 2019,
+  month        = {Dec},
+  journal      = {YouTube},
+  howpublished = {https://youtu.be/MNgsOb2OM30},
+  language     = {ukrainian}
+}
+@misc{video:mmzi:yakovlev_discrete_math,
+  title        = {Дискретна математика, лекція 05-2: відношення еквівалентності (продовження); замикання відношень},
+  author       = {Кафедра ММЗІ},
+  year         = 2016,
+  month        = {Sep},
+  journal      = {YouTube},
+  howpublished = {https://youtu.be/a7TUp4p-pIk},
+  language     = {ukrainian}
+}
+@misc{video:mmzi:yakovlev_numbers_theory,
+  title        = {Основи теорії чисел, лекція 13-1: порядок лишку за модулем},
+  author       = {Кафедра ММЗІ},
+  year         = 2019,
+  month        = {Jun},
+  journal      = {YouTube},
+  howpublished = {https://youtu.be/\_8gSo2YkfAU},
+  language     = {ukrainian}
+}
+@misc{website:coco_dataset,
+  title       = {Microsoft COCO: Common Objects in Context},
+  author      = {Lin, Tsung-Yi and Maire, Michael and Belongie, Serge and Bourdev, Lubomir and Girshick, Ross and others},
+  year        = 2014,
+  url         = {http://arxiv.org/abs/1405.0312},
+  added-at    = {2020-06-07T20:25:18.000+0200},
+  biburl      = {https://www.bibsonomy.org/bibtex/2f4ab9f41677ee189a8cbc5a92cc0dc74/jan.hofmann1},
+  description = {Microsoft COCO: Common Objects in Context},
+  timestamp   = {2020-06-07T20:25:18.000+0200}
+}
+@misc{website:deep_wise_sep_conv,
+  title        = {Depthwise separable convolutions for machine learning},
+  author       = {Bendersky, Eli},
+  year         = 2018,
+  month        = {Apr},
+  journal      = {Eli Bendersky’s website},
+  howpublished = {https://eli.thegreenplace.net/2018/depthwise-separable-convolutions-for-machine-learning/},
+  language     = {english}
+}
+@article{website:faster_rcnn,
+  title   = {Faster RCNN Object detection},
+  author  = {KHAZRI, Achraf},
+  year    = 2019,
+  month   = {Apr},
+  journal = {Towards Data Science},
+  url     = {https://towardsdatascience.com/faster-rcnn-object-detection-f865e5ed7fc4}
+}
+@misc{website:pymaxflow_library,
+  title   = {pmneila/PyMaxflow: Python library for creating flow networks and computing the maxflow/mincut (aka graph-cuts for Python)},
+  author  = {pmneila},
+  journal = {GitHub},
+  url     = {https://github.com/pmneila/PyMaxflow}
+}
+@misc{website:squeeze_and_excitation,
+  title        = {Squeeze and Excitation Networks Explained with PyTorch Implementation},
+  author       = {Aman Arora},
+  year         = 2020,
+  month        = {Jul},
+  journal      = {Committed towards better future},
+  howpublished = {https://amaarora.github.io/2020/07/24/SeNet.html},
+  language     = {english}
+}
+@misc{website:yolov5_pytorch,
+  title    = {ultralytics/yolov5: v6.1 - TensorRT, TensorFlow Edge TPU and OpenVINO Export and Inference},
+  author   = {Glenn Jocher and Ayush Chaurasia and Alex Stoken and Jirka Borovec and others},
+  year     = 2022,
+  month    = {feb},
+  doi      = {10.5281/zenodo.6222936},
+  url      = {https://doi.org/10.5281/zenodo.6222936},
+  version  = {v6.1},
+  language = {english}
 }
