--- a/4_analogs/2_examples.tex
+++ b/4_analogs/2_examples.tex
@@ -1,19 +1,19 @@
 \section{Перша робота по оцифровуванню дошки}
 У 2004 році інженери з Microsoft Research Zhengyou Zhang
 та Li-wei He представили свій алгоритм по скануванню написів
-білої дошки \cite{zhang:2004}. Система оброблює фотографії білої дошки, локалізує область
+білої дошки \cite{bib:zhang:2004}. Система оброблює фотографії білої дошки, локалізує область
 написів, вирівнює у прямокутну форму дошку та бінаризує написи без втрати
 кольору (рис. \ref{fig:zhang:2004}).
 
 \begin{figure}[H]
   \centering
   \subfloat[До обробки]{
-      \includegraphics[width=0.35\textwidth]{images/zhang_2004_1}
+    \includegraphics[width=0.35\textwidth]{images/zhang_2004_1}
   }
   \subfloat[Після обробки]{
-      \includegraphics[width=0.35\textwidth]{images/zhang_2004_2}
+    \includegraphics[width=0.35\textwidth]{images/zhang_2004_2}
   }
-  \caption{Демонстрація роботи алгоритму інженерів з Microsoft \cite{zhang:2004}
+  \caption{Демонстрація роботи алгоритму інженерів з Microsoft \cite{bib:zhang:2004}
     \label{fig:zhang:2004}
   }
 \end{figure}
@@ -23,26 +23,26 @@
 досягається насамперед тим, що вона має білий колір, що в свою чергу
 накладає обмеження на використання технології з дошками відмінного
 від білого кольорів.
-У наступній свої роботі \cite{zhang:2007} ці ж самі автори побудували
+У наступній свої роботі \cite{bib:zhang:2007} ці ж самі автори побудували
 технологію, яка в реальному часі оброблює відеозапис та видаляє людину біля
 дошки за допомогою часової медіани, але тут немає
 панорамного склеювання знімків. Головна ідея роботи полягала у розробці
 програми для телеконференцій.
 
 \section{Автоматичне сканування дошки}
-Автори роботи \cite{wienecke} створили програму, яка переводить написи на білій
+Автори роботи \cite{bib:wienecke} створили програму, яка переводить написи на білій
 дошці у цифрові (рис. \ref{fig:wienecke}). Вони реалізували локалізацію тексту та подальшу
 його обробку. Дана технологія не вирішує проблему перекривання викладачем написів,
 а також не дозволяє використовувати дошку, що має відмінний від білого колір.
 \begin{figure}[H]
   \centering
   \subfloat[Детекція написів]{
-      \includegraphics[width=0.35\textwidth]{images/wienecke_1}
+    \includegraphics[width=0.35\textwidth]{images/wienecke_1}
   }
   \subfloat[Обробка написів]{
-      \includegraphics[width=0.35\textwidth]{images/wienecke_2}
+    \includegraphics[width=0.35\textwidth]{images/wienecke_2}
   }
-  \caption{Демонстрація роботи сканування дошки \cite{wienecke}
+  \caption{Демонстрація роботи сканування дошки \cite{bib:wienecke}
     \label{fig:wienecke}
   }
 \end{figure}
@@ -51,7 +51,7 @@
 
 \section{Відстежування об'єкту та віднімання фону}
 У 2012 році науковці зі Стенфордського університету Alex Gonzalez,
-Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh} локалізації дошки
+Bongsoo Suh, Eun Soo Choi представили технологію \cite{bib:suh} локалізації дошки
 (навіть такої, яка розділена на частини), відстеження викладача та його
 подальше прибирання. Алгоритм також може працювати з різними кольорами
 дошок. Для прибирання викладача і всіх рухомих об'єктів автори також
@@ -63,7 +63,7 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.5\textwidth]{images/suh}
-  \caption{Демонстрація роботи авторів зі Стенфордського університету \cite{suh}
+  \caption{Демонстрація роботи авторів зі Стенфордського університету \cite{bib:suh}
     \label{fig:suh}
   }
 \end{figure}
@@ -72,7 +72,7 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 відео лекціях, де камера знімає всю дошку і не рухається за викладачем.
 
 \section{Відокремлення написів дошки}
-У 2014 році науковці з Тайванського університету представили свій алгоритм \cite{yeh}
+У 2014 році науковці з Тайванського університету представили свій алгоритм \cite{bib:yeh}
 оцифровування дошки (рис. \ref{fig:yeh}). Для видалення викладача, автори застосували
 алгоритм кластеризації k-means. Для отримання бінаризованих написів з дошки
 використане адаптивне вирівнювання. Варто відмітити гарну
@@ -80,22 +80,22 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 \begin{figure}[H]
   \centering
   \subfloat[До обробки]{
-      \includegraphics[width=0.45\textwidth]{images/yeh_1}
+    \includegraphics[width=0.45\textwidth]{images/yeh_1}
   }\\
   \subfloat[Після обробки]{
-      \includegraphics[width=0.45\textwidth]{images/yeh_2}
+    \includegraphics[width=0.45\textwidth]{images/yeh_2}
   }
-  \caption{Демонстрація роботи сканування дошки \cite{yeh}
+  \caption{Демонстрація роботи сканування дошки \cite{bib:yeh}
     \label{fig:yeh}
   }
 \end{figure}
 Автори не надали час обробки всього відео. Щоб отримати якісну сегментацію
-дошки та викладача, потрібно, щоб кадр містив не просто викладача, а викладача з кольором одягу 
+дошки та викладача, потрібно, щоб кадр містив не просто викладача, а викладача з кольором одягу
 сильно відмінним від кольору дошки. Це потрібно для коректної роботи алгоритму k-means.
 Тому немає гарантії, що якийсь рухомий об'єкт не буде класифікований як дошка під час класифікації.
 
 \section{Сучасна робота}
-Окремо зазначимо роботу \cite{davila:2017}
+Окремо зазначимо роботу \cite{bib:davila:2017}
 науковців з університету Рочестер. Автори Kenny Davila та Richard Zanibbi
 використали просторово-часовий індекс для виокремлення написів і викладача (рис. \ref{fig:davila:2017}).
 Відбувається видалення не самого викладача,  а його контурів після бінаризації картинки.
@@ -103,22 +103,22 @@ Bongsoo Suh, Eun Soo Choi представили технологію \cite{suh}
 \begin{figure}[H]
   \centering
   \subfloat[До обробки]{
-      \includegraphics[width=0.45\textwidth]{images/davila_2017_1}
+    \includegraphics[width=0.45\textwidth]{images/davila_2017_1}
   }\\
   \subfloat[Після обробки]{
-      \includegraphics[width=0.45\textwidth]{images/davila_2017_2}
+    \includegraphics[width=0.45\textwidth]{images/davila_2017_2}
   }
-  \caption{Демонстрація роботи сканування дошки \cite{davila:2017}
+  \caption{Демонстрація роботи сканування дошки \cite{bib:davila:2017}
     \label{fig:davila:2017}
   }
 \end{figure}
-Пізніше, ці ж автори створили повністю згорткову нейронну мережу \cite{davila:2021}
+Пізніше, ці ж автори створили повністю згорткову нейронну мережу \cite{bib:davila:2021}
 для обробки написів дошки. Дана нейронна мережа LectureNet досить добре бінаризує написи з дошки
 (рис. \ref{fig:davila:2021}).
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.7\textwidth]{images/davila_2021}
-  \caption{Приклад роботи авторів з Рочестер \cite{davila:2021}} 
+  \caption{Приклад роботи авторів з Рочестер \cite{bib:davila:2021}}
   \label{fig:davila:2021}
 \end{figure}
 
