--- a/5_problem/11_fast_median.tex
+++ b/5_problem/11_fast_median.tex
@@ -3,7 +3,7 @@
 Введемо необхідні означення.
 
 \begin{definition}
-    Накопичувальна сума масиву \cite{integral_image} $X$~---~це масив, кожний елемент якого є сумою всіх попередніх.
+    Накопичувальна сума масиву \cite{bib:integral_image} $X$~---~це масив, кожний елемент якого є сумою всіх попередніх.
 \end{definition}
 
 Наведемо рекурентну формулу обчислення накопичувальної суми
@@ -13,7 +13,7 @@
 \end{equation}
 
 \begin{definition}
-    Медіаною \cite{median_in_statistics} називають елемент, який стоїть посередині впорядкованого масиву.
+    Медіаною \cite{bib:median_in_statistics} називають елемент, який стоїть посередині впорядкованого масиву.
     Якщо кількість елементів парна, то медіаною називається середнє значення між двома числами,
     що стоять посередині масиву.
 \end{definition}
@@ -21,13 +21,13 @@
 \begin{definition}
     Темпоральною медіаною у комп'ютерному зорі називають зображення,
     в кожному пікселі якого знаходиться медіанне значення, що знайдене між значеннями пікселів у часовому проміжку
-    (рис. \ref{fig:temporal_median_example_1}).
+    (рис. \ref{fig:temporal_median_example}).
 \end{definition}
 
 Темпоральну медіану застосовують у комп'ютерному зорі для отримання
-фону сцени у відео \cite{temporal_median_example_1}.
+фону сцени у відео \cite{bib:temporal_median_example}.
 Тобто всі об'єкти, що рухаються, зникають на медіанному зображенні
-(рис. \ref{fig:temporal_median_example_1}).
+(рис. \ref{fig:temporal_median_example}).
 Розрахунок темпоральної медіани складається з наступних кроків:
 \begin{enumerate}
     \item береться набір кадрів деякого часовому проміжку;
@@ -39,8 +39,8 @@
     \centering
     \includegraphics[width=0.5\textwidth]{images/temporal_median_example_1}
     \caption{Приклад отримання фону без людини шляхом використання темпоральної медіани
-        \cite{temporal_median_example_1}
-        \label{fig:temporal_median_example_1}
+        \cite{bib:temporal_median_example}
+        \label{fig:temporal_median_example}
     }
 \end{figure}
 Даний метод можна застосовувати як для прибирання швидких рухомих об'єктів,
@@ -52,7 +52,7 @@
 Нехай у нас є не відсортований масив цілих чисел з множини $\{0,..., 255\}$.
 Для того, щоб знайти в ньому медіану, потрібно відсортувати масив.
 Для сортування масиву можна використати алгоритм швидкого сортування (quick sort)
-\cite{quick_sort}. У середньому випадку він працює за $\mathcal{O}(n\log{}n)$, в
+\cite{bib:quick_sort}. У середньому випадку він працює за $\mathcal{O}(n\log{}n)$, в
 найгіршому $\mathcal{O}(n^2)$.
 Запропонований нижче алгоритм працюватиме за $\mathcal{O}(n)$.
 
@@ -107,7 +107,7 @@
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{images/median_seq}
-    \caption{Приклад послідовності картинок для формування медіани з відео \cite{yakovlev_numbers_theory_video}
+    \caption{Приклад послідовності картинок для формування медіани з відео \cite{video:mmzi:yakovlev_numbers_theory}
         \label{fig:median_seq_example}
     }
 \end{figure}
@@ -117,7 +117,7 @@
 окремо для кожного каналу.
 
 В інформаційній технології перетворення відеозапису з дошки у слайд-шоу
-\cite{creating_slides_1} \cite{patent_board}
+\cite{bib:creating_slides_1} \cite{bib:patent_board}
 алгоритм швидкої медіани застосовується на панорамних знімках
 з метою знешумлення на підвищення якості написів на дошці.
 
