--- a/5_problem/9_panorama_creating.tex
+++ b/5_problem/9_panorama_creating.tex
@@ -17,13 +17,13 @@
         \includegraphics[width=0.25\textwidth]{images/kratnye_intergraly_center}
     }
     \subfloat[Права частина]{
-        \includegraphics[width=0.25\textwidth]{images/kratnye_intergraly_center}
+        \includegraphics[width=0.25\textwidth]{images/kratnye_intergraly_right}
     }\\
     \subfloat[Панорама]{
         \includegraphics[width=0.7\textwidth]{images/kratnye_integraly_panorama_example_1}
     }
     \caption{Приклад отриманої панорами з автоматичним видаленням
-        викладача з відео \cite{fpmi_2021_video}
+        викладача з відео \cite{video:mfti:kratnye_integraly}
         \label{fig:panorama_example}
     }
 \end{figure}
